Fix alignment of inserter button

--- a/packages/js/product-editor/src/components/iframe-editor/header-toolbar/header-toolbar.scss
+++ b/packages/js/product-editor/src/components/iframe-editor/header-toolbar/header-toolbar.scss
@@ -33,6 +33,8 @@
 		display: flex;
 
 		.woocommerce-iframe-editor-document-tools {
+			display: block;
+
 			padding-right: $gap-smaller;
 			margin-right: $gap-smaller;
 		}
